# scrapy-autoextract

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGES.rst  LICENSE  README.rst  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
scrapy_autoextract/: __init__.py  cache.py  errors.py  middlewares.py  providers.py  slot_semaphore.py  task_manager.py  utils.py
test/: requirements.txt  test_autoextract.py  test_providers.py
tests/: conftest.py  requirements.txt  test_autoextract.py  test_errors.py  test_providers.py  test_slot_semaphore.py  test_task_manager.py  utils.py
