[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max-line-length = 120
extend-ignore =
    D203,
    # E121 continuation line under-indented for hanging indent
    E121,
    # E128 continuation line under-indented for visual indent
    E128,
exclude =
    __pycache__,
    .cache,
    .eggs,
    .git,
    .tox,
    *.egg-info,
    *.pyc,
    build,
    dist
